wednesday morning typing warmup, adding content and trying to fix overflow and overlap, to no avail

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     color: #0000EE;
+    box-sizing: border-box;
 }
 
 *:hover {
